--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "quill": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
