--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "mongoose": "^8.3.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
